style.css: Remove overflow hidden fixes non scrollable bug

--- a/festcms/festflow/static/css/style.css
+++ b/festcms/festflow/static/css/style.css
@@ -1,13 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Acme');
 
-body,h1,h2,h3,h4,h5,h6 {font-family: "Acme", sans-serif;}
-body, html {
-    height: 100%;
-    color: #777;
-    overflow-y: hidden;
-    /*line-height: 1.8;*/
-}
+
 /*IMAGE*/
 .w3-center img {
     max-width:50% ;
